# SmallLang

./: CMakeLists.txt  README.md  main.cpp  runner.sh
core/: parser_grammar.bnf
core/data/: Constants.hpp
core/entities/: CustomLang.hpp  CustomLangException.hpp  Environment.hpp
